Add new project

--- a/src/index.html
+++ b/src/index.html
@@ -79,25 +79,25 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Over the past decade, I have been deeply immersed in the realms
-                of Web 2.0 and Web 3.0, developing innovative solutions as a
-                software engineer and web app developer. My journey has
-                encompassed working on major e-commerce platforms, healthcare
-                applications, and recently, creating a decentralized exchange
-                (DEX) trading platform in the DeFi sector. I have taken on key
-                roles and leadership positions, collaborating with international
-                teams and clients across Europe and beyond.
+                Dynamic software engineer with a decade of rich experience
+                developing efficient web and cloud solutions using cutting-edge
+                technologies like Vue, React, and Node.js. My journey spans
+                diverse sectors including healthcare, insurance, finance,
+                large-scale e-commerce platforms, and decentralized exchange
+                (DEX) trading platforms in the DeFi sector. I've taken on key
+                leadership roles, collaborating with international teams and
+                clients across Europe and beyond.
               </p>
               <p class="about-wrapper__info-text">
                 As a highly motivated professional, I excel in delivering
-                impactful solutions and leading cross-functional teams. I have
-                continuously honed my analytical thinking, problem-solving, and
-                collaboration skills. I am particularly skilled at understanding
-                and anticipating client needs, enabling me to deliver
-                user-centric solutions. With a focus on continuous growth and
-                staying at the forefront of technological advancements, I am
-                eager to leverage my expertise in both Web 2.0 and Web 3.0 to
-                drive positive outcomes for future projects.
+                impactful, user-centric solutions and leading cross-functional
+                teams. Specializing in both Web 2.0 and Web 3.0 development, I
+                bring strong analytical thinking, problem-solving abilities, and
+                a deep understanding of client needs. With a focus on continuous
+                growth and staying at the forefront of technological
+                advancements, I'm eager to leverage my expertise in modern web
+                and cloud technologies to drive positive outcomes for future
+                projects.
               </p>
 
               <!-- <span class="d-flex mt-3">
@@ -122,6 +122,50 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Project Portfolio</h2>
+
+          <!-- Wallbid Project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Wallbid</h3>
+                <div>
+                  <p class="mb-4">
+                    An embedded insurance platform built with Nuxt 4 and Vue 3,
+                    enabling insurers and distributors to integrate protection
+                    products seamlessly into digital ecosystems. A zero-code solution
+                    that powers insurance distribution for banks, e-commerce
+                    platforms, and telcos across Europe.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://wallbid.io/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://wallbid.io/"
+                  target="_blank"
+                >
+                  <div class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Wallbid Project Image"
+                      class="img-fluid"
+                      src="assets/wallbid.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Wallbid Project -->
 
           <!-- CyberDex Project -->
           <div class="row">
